fix image not showing bug

--- a/sass/main.css
+++ b/sass/main.css
@@ -100,7 +100,7 @@
 .menu-branding .portrait {
   width: 250px;
   height: 250px;
-  background: url("../../img/portrait.jpg");
+  background: url(../img/portrait.jpg);
   border-radius: 50%;
   border: solid 3px #f46036;
 }
@@ -172,7 +172,7 @@ body {
 }
 
 body#bg-image {
-  background: url(../../img/background.jpg);
+  background: url(../img/background.jpg);
   background-attachment: fixed;
   background-size: cover;
 }
